--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start:dev": "nodemon ./src/index.ts",
     "start": "node ./build/index.js",
-    "migration": "npx sequelize db:migrate",
     "build": "tsc && mkdir ./build/swagger && cp ./src/swagger/swagger.yaml ./build/swagger/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.3",
     "@types/koa-router": "^7.4.1",
     "@types/koa__cors": "^3.0.1",
     "@types/node": "^14.0.14",
+    "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
     "@types/yamljs": "^0.2.31",
     "nodemon": "^2.0.4",
@@ -26,12 +28,15 @@
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-router": "^9.0.1",
     "koa2-swagger-ui": "^3.0.1",
-    "sequelize": "^6.2.3",
+    "sequelize": "^6.3.0",
     "sqlite3": "^4.2.0",
     "ts-node": "^8.10.2",
     "yamljs": "^0.3.0"
