--- a/package.json
+++ b/package.json
@@ -22,7 +22,17 @@
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
     "@types/yamljs": "^0.2.31",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
     "sequelize-cli": "^6.1.0",
     "typescript": "^3.9.6"
   },
@@ -40,5 +50,13 @@
     "sqlite3": "^4.2.0",
     "ts-node": "^8.10.2",
     "yamljs": "^0.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": "eslint --fix"
   }
 }
